--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -1,13 +1,39 @@
-div, mat-toolbar {
-  background-color: #eceee5;
+$base-color: #e8e6df;
+$light-grey-violet: #aba3a4;
+$dark-grey-violet: #746c7c;
+
+mat-menu, .pastel {
+  background-color: $base-color;
 }
 
-button {
-  margin: 0 3rem;
+.mat-mdc-button {
+  height: 7rem;
+  width: 5rem;
+  max-width: 5rem;
+  margin: 0 2rem;
+  height: 3rem;
 }
 
-@media (max-width:629px) {
-  img.my-img {
-    display: none;
-  }
+::ng-deep .mat-toolbar{
+  z-index: 998;
+  position: fixed;
+  min-height: fit-content;
+  background-color: transparent;
+}
+
+.heading-content {
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  max-width: 100%;
+  padding: 3rem;
+    fa-icon {
+      font-size: 2rem;
+      margin: 1rem;
+      cursor: pointer;
+    }
+}
+
+img {
+  max-height: 100vh;
 }
