--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -15,9 +15,9 @@
     <p class="lead">Junior Full Stack Developer</p>
     <div class="d-flex flex-wrap">
       <div (click)="openDialog()"><fa-icon [icon]="email"></fa-icon></div>
-      <div (click)="openDialog()"><fa-icon [icon]="linkedIn"></fa-icon></div>
-      <div (click)="openDialog()"><fa-icon [icon]="gitHub"></fa-icon></div>
-      <div (click)="openDialog()"><fa-icon [icon]="instagram"></fa-icon></div>
+      <div (click)="navigateToLinkedIn()"><fa-icon [icon]="linkedIn"></fa-icon></div>
+      <div (click)="navigateToGitHub()"><fa-icon [icon]="gitHub"></fa-icon></div>
+      <!-- <div (click)="navigateToInstagram()"><fa-icon [icon]="instagram"></fa-icon></div> -->
     </div>
   </div>
 </div>
