--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section class="vh-100">
+<section class="vh-100" style="background-color: whitesmoke;">
   <home></home>
 </section>
 <section class="vh-100">
