--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -1,38 +1,24 @@
-$base-color: #e8e6df;
-$light-grey-violet: #aba3a4;
-$dark-grey-violet: #746c7c;
-
-mat-menu, .pastel {
-  background-color: $base-color;
-}
-
-.mat-mdc-button {
-  height: 7rem;
-  width: 5rem;
-  max-width: 5rem;
-  margin: 0 2rem;
-  height: 3rem;
-}
-
-::ng-deep .mat-toolbar{
-  z-index: 998;
-  position: fixed;
-  background-color: transparent;
-}
-
-.heading-content {
-  position: absolute;
-  top: 30%;
-  width: 100%;
-  max-width: 100%;
-  padding: 3rem;
-    fa-icon {
-      font-size: 2rem;
-      margin: 1rem;
-      cursor: pointer;
-    }
+.mat-mdc-card  {
+  margin: 2rem;
+  height: 80vh;
+  border-radius: 10px;
+  .mat-mdc-card-content {
+    padding-top: 5em;
+  }
 }
 
 img {
-  max-height: 100vh;
+  border-radius: 50%;
+}
+
+fa-icon {
+  font-size: 1.5rem;
+  margin: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1000px) {
+  img {
+    max-height: 30vh;
+  }
 }
