--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,19 @@
-<section class="vh-100" style="background-color: whitesmoke;">
-  <home></home>
+<section [ngClass]="{'dark': mode === modes.DARK, 'light': mode === modes.LIGHT}">
+  <home [mode]="mode"></home>
 </section>
-<section class="vh-100">
+<section [ngClass]="{'dark': mode === modes.DARK, 'light': mode === modes.LIGHT}">
   <education></education>
 </section>
-<section class="vh-100">
+<section [ngClass]="{'dark': mode === modes.DARK, 'light': mode === modes.LIGHT}">
   <work></work>
 </section>
-<section class="vh-100">
+<section [ngClass]="{'dark': mode === modes.DARK, 'light': mode === modes.LIGHT}">
   <projects></projects>
 </section>
-<section class="vh-100">
+<section [ngClass]="{'dark': mode === modes.DARK, 'light': mode === modes.LIGHT}">
   <hobbies></hobbies>
 </section>
+
+<div class="mode d-flex justify-content-end" (click)="switchTheme()">
+  <fa-icon [icon]="icon"></fa-icon>
+</div>
