--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,16 +47,14 @@ $my-portfolio-theme: mat.define-light-theme((
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.h-100 {
-  height: 100% !important;
-}
-
-.vh-80 {
-  height: 80vh !important;
-}
-
-.vh-100 {
-  height: 100vh !important;
-}
-
 // <div style="height: 100vh;">
+
+.dark {
+  background-color: #1a1a1a;
+  color: whitesmoke;
+}
+
+.light {
+  background-color: whitesmoke;
+  color: #1a1a1a;
+}
