home component css

--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -9,7 +9,7 @@
   <mat-card>
     <mat-card-content>
       <div class="row">
-        <div class="col-lg-8 col-md-12">
+        <div class="col-lg-8 col-md-12 text">
           <h1  class="display-2">Hi, I'm Kristina</h1>
           <p class="lead">Junior Full Stack Developer</p>
           <div class="d-flex flex-wrap">
