home component css

--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -36,6 +36,8 @@ fa-icon {
   }
   .mat-mdc-raised-button {
     margin-left: 5em;
+    height: 4em;
+    width: 10em;
   }
   img {
     margin-top: 5em;
