change to lavander color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   <hobbies></hobbies>
 </section> -->
 
-<div class="row">
+<div class="row gradient-row">
   <div class="col">
     <home></home>
   </div>
