--- a/src/app/view/education/education.component.scss
+++ b/src/app/view/education/education.component.scss
@@ -1,3 +1,13 @@
 .card {
   margin: 1em;
 }
+
+h2 {
+  margin-top: 1em;
+}
+
+@media screen and (min-width: 1000px) {
+  .card {
+    margin: 8em 1em;
+  }
+}
