fixed horizontal scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,30 +13,31 @@
 <section [ngClass]="{'dark': mode === modes.DARK, 'light': mode === modes.LIGHT}">
   <hobbies></hobbies>
 </section> -->
-
-<div class="row gradient-row">
-  <div class="col">
-    <home></home>
+<div class="container">
+  <div class="row gradient-row">
+    <div class="col">
+      <home></home>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <education></education>
+  <div class="row">
+    <div class="col">
+      <education></education>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <work></work>
+  <div class="row">
+    <div class="col">
+      <work></work>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <projects></projects>
+  <div class="row">
+    <div class="col">
+      <projects></projects>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col">
-    <skills></skills>
+  <div class="row">
+    <div class="col">
+      <skills></skills>
+    </div>
   </div>
 </div>
 
