--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -19,8 +19,8 @@
             <!-- <div (click)="navigateToInstagram()"><fa-icon [icon]="instagram"></fa-icon></div> -->
           </div>
         </div>
-        <div class="col-lg-4 col-md-12 d-flex justify-content-center">
-          <img src="../assets/images/portrait.png" class="img-fluid mask" alt="Portrait">
+        <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+          <img src="../assets/images/portrait.png" class="img-fluid" alt="Portrait">
         </div>
       </div>
       <div class="row">
