--- a/src/app/view/projects/projects.component.html
+++ b/src/app/view/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center" style="margin: 6em 0;">
+<div class="row justify-content-center">
   <h2 class="display-4 text-center">Projects</h2>
   <mat-card class="col-lg-3 col-md-4 col-6" *ngFor="let project of projects">
     <mat-card-header>
