--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,3 +44,47 @@
 <div class="mode d-flex justify-content-end" (click)="switchTheme()">
   <fa-icon [icon]="icon"></fa-icon>
 </div>
+
+<footer class="text-center text-lg-start bg-purple text-muted">
+  <section class="d-flex justify-content-center justify-content-lg-between p-4">
+    <div class="me-5 d-none d-lg-block bg-purple">
+      <span class="text-uppercase">Socials</span>
+    </div>
+
+    <div>
+      <a href="" class="me-4 link-secondary">
+        <!-- <i class="fab fa-facebook-f"></i> -->
+        <fa-icon [icon]="fb"></fa-icon>
+      </a>
+      <a href="https://www.instagram.com/kika.trifunovic" class="me-4 link-secondary">
+        <!-- <i class="fab fa-instagram"></i> -->
+        <fa-icon [icon]="ig"></fa-icon>
+      </a>
+      <a href="https://rs.linkedin.com/in/kristinatrifunovic" class="me-4 link-secondary">
+        <!-- <i class="fab fa-linkedin"></i> -->
+        <fa-icon [icon]="linkedIn"></fa-icon>
+      </a>
+      <a href="https://github.com/kristina-trifunovic" class="me-4 link-secondary">
+        <!-- <i class="fab fa-github"></i> -->
+        <fa-icon [icon]="gitHub"></fa-icon>
+      </a>
+    </div>
+  </section>
+
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <div class="row mt-3 bg-purple">
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><fa-icon [icon]="envelope" class="me-3 text-secondary"></fa-icon>Boljevac, Boljevac 19370, Serbia</p>
+          <p><fa-icon [icon]="addressBook" class="me-3 text-secondary"></fa-icon>kikatrifunovic00@icloud.com</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025); color: whitesmoke;">
+    © 2023 Copyright:
+    <a class="text-reset fw-bold" href="">Kristina Trifunović</a>
+  </div>
+</footer>
