--- a/src/app/view/skills/skills.component.html
+++ b/src/app/view/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-5">
   <h2 class="display-4 text-center">Skills</h2>
   <div class="row">
     <div class="col-lg-6 col-md-6 col-12">
