--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@ $my-portfolio-theme: mat.define-light-theme((
   )
 ));
 
-$light-purple: #d2cbf6;
+$light-purple: #b4a4e4;
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
