--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar class="navbar navbar-expand-lg d-flex justify-content-around toolbar-fixed">
-  <button mat-button>Education</button>
-  <button mat-button>Work</button>
-  <button mat-button>Projects</button>
-  <button mat-button>Skills</button>
+  <button mat-button (click)="scroll(education)">Education</button>
+  <button mat-button (click)="scroll(work)">Work</button>
+  <button mat-button (click)="scroll(projects)">Projects</button>
+  <button mat-button (click)="scroll(skills)">Skills</button>
 </mat-toolbar>
 
-<div class="gradient-row">
+<div class="gradient-row" #home>
   <div class="container">
     <div class="row gradient-row">
       <div class="col">
@@ -16,22 +16,22 @@
 </div>
 <div class="bg-light-purple">
   <div class="container">
-    <div class="row bg-light-purple">
+    <div class="row bg-light-purple" #education>
       <div class="col">
         <education></education>
       </div>
     </div>
-    <div class="row bg-light-purple">
+    <div class="row bg-light-purple" #work>
       <div class="col">
         <work></work>
       </div>
     </div>
-    <div class="row bg-light-purple">
+    <div class="row bg-light-purple" #projects>
       <div class="col">
         <projects></projects>
       </div>
     </div>
-    <div class="row bg-light-purple">
+    <div class="row bg-light-purple" #skills>
       <div class="col">
         <skills></skills>
       </div>
