--- a/src/app/view/projects/projects.component.html
+++ b/src/app/view/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <h2 class="display-4 text-center">Projects</h2>
+  <h2 class="display-4 text-center mtop-6-mbottom-1">Projects</h2>
   <mat-card class="col-lg-3 col-md-4 col-6" *ngFor="let project of projects">
     <mat-card-header>
       <mat-card-title>{{project.name}}</mat-card-title>
