--- a/src/app/view/work/work.component.html
+++ b/src/app/view/work/work.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center align-items-center flex-column">
-  <h2 class="display-4">Qualification</h2>
+  <h2 class="display-4 mtop-6-mbottom-1">Qualification</h2>
   <mat-stepper orientation="vertical">
     <mat-step *ngFor="let work of workArray; let i=index">
       <ng-template matStepLabel>{{work.title}}</ng-template>
