--- a/src/app/view/education/education.component.html
+++ b/src/app/view/education/education.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h2 class="display-4 text-center">Education</h2>
+    <h2 class="display-4 text-center mtop-6-mbottom-1">Education</h2>
     <div class="col-lg-4 col-md-6 col-12" *ngFor="let education of educations">
       <div class="card">
         <h5 class="card-header">{{education.name}}</h5>
