--- a/src/app/view/skills/skills.component.html
+++ b/src/app/view/skills/skills.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5">
-  <h2 class="display-4 text-center">Skills</h2>
+  <h2 class="display-4 text-center mtop-6-mbottom-1">Skills</h2>
   <div class="row">
     <div class="col-lg-6 col-md-6 col-12">
       <mat-accordion multi>
