--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,10 @@ $light-purple: #b4a4e4;
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.mtop-6-mbottom-1 {
+  margin: 3em 0 1em 0;
+}
+
 .dark {
   background-color: #1a1a1a;
   color: whitesmoke;
