mat-card margin top

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,10 @@ $dark-purple: #e4a4c7;
   z-index: 997;
 }
 
+.mtop-lg {
+  margin-top: 6em;
+}
+
 .gradient-row {
   background: linear-gradient($lighter-purple 0%, $light-purple 100%);
 }
