--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <div class="gradient-row" #home>
   <div class="container">
     <div class="row gradient-row">
-      <div class="col">
+      <div class="col mtop-lg">
         <home></home>
       </div>
     </div>
