--- a/src/app/view/projects/projects.component.html
+++ b/src/app/view/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <h2 class="display-4 text-center mtop-6-mbottom-1">Projects</h2>
-  <mat-card class="col-lg-3 col-md-4 col-6" *ngFor="let project of projects">
+  <mat-card class="col-lg-3 col-md-4 col-6 justify-content-between" *ngFor="let project of projects">
     <mat-card-header>
       <mat-card-title>{{project.name}}</mat-card-title>
       <mat-card-subtitle>{{project.technologies}}</mat-card-subtitle>
